// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/Tooltip Central smoke-test 1`] = `
<div class="grid grid-cols-2 gap-4 w-[37.5rem]">
  <div class="font-mono text-center">
    dark
  </div>
  <div class="font-mono text-center">
    light
  </div>
  <div class="w-64 h-64 bg-neutral-1300 flex items-center justify-center m-6 border mx-auto rounded-lg">
    <div class="inline-flex ml-2">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] "
      >
        <svg xmlns="http://www.w3.org/2000/svg"
             fill="none"
             viewbox="0 0 24 24"
             stroke-width="1.5"
             stroke="currentColor"
             aria-hidden="true"
             data-slot="icon"
             class="text-neutral-700 dark:text-neutral-600"
             style="width: 1rem; height: 1rem;"
        >
          <path stroke-linecap="round"
                stroke-linejoin="round"
                d="m11.25 11.25.041-.02a.75.75 0 0 1 1.063.852l-.708 2.836a.75.75 0 0 0 1.063.853l.041-.021M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9-3.75h.008v.008H12V8.25Z"
          >
          </path>
        </svg>
      </button>
    </div>
  </div>
  <div class="w-64 h-64 flex items-center justify-center m-6 border mx-auto rounded-lg">
    <div theme="light"
         class="inline-flex ml-2"
    >
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] "
      >
        <svg xmlns="http://www.w3.org/2000/svg"
             fill="none"
             viewbox="0 0 24 24"
             stroke-width="1.5"
             stroke="currentColor"
             aria-hidden="true"
             data-slot="icon"
             class="text-neutral-700 dark:text-neutral-600"
             style="width: 1rem; height: 1rem;"
        >
          <path stroke-linecap="round"
                stroke-linejoin="round"
                d="m11.25 11.25.041-.02a.75.75 0 0 1 1.063.852l-.708 2.836a.75.75 0 0 0 1.063.853l.041-.021M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9-3.75h.008v.008H12V8.25Z"
          >
          </path>
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Components/Tooltip Interactive smoke-test 1`] = `
<div class="grid grid-cols-2 gap-4 w-[37.5rem]">
  <div class="font-mono text-center">
    dark
  </div>
  <div class="font-mono text-center">
    light
  </div>
  <div class="w-64 h-64 bg-neutral-1300 flex items-center justify-center m-6 border mx-auto rounded-lg">
    <div class="inline-flex ml-2">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] "
      >
        <svg xmlns="http://www.w3.org/2000/svg"
             fill="none"
             viewbox="0 0 24 24"
             stroke-width="1.5"
             stroke="currentColor"
             aria-hidden="true"
             data-slot="icon"
             class="text-neutral-700 dark:text-neutral-600"
             style="width: 1rem; height: 1rem;"
        >
          <path stroke-linecap="round"
                stroke-linejoin="round"
                d="m11.25 11.25.041-.02a.75.75 0 0 1 1.063.852l-.708 2.836a.75.75 0 0 0 1.063.853l.041-.021M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9-3.75h.008v.008H12V8.25Z"
          >
          </path>
        </svg>
      </button>
    </div>
  </div>
  <div class="w-64 h-64 flex items-center justify-center m-6 border mx-auto rounded-lg">
    <div theme="light"
         class="inline-flex ml-2"
    >
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] "
      >
        <svg xmlns="http://www.w3.org/2000/svg"
             fill="none"
             viewbox="0 0 24 24"
             stroke-width="1.5"
             stroke="currentColor"
             aria-hidden="true"
             data-slot="icon"
             class="text-neutral-700 dark:text-neutral-600"
             style="width: 1rem; height: 1rem;"
        >
          <path stroke-linecap="round"
                stroke-linejoin="round"
                d="m11.25 11.25.041-.02a.75.75 0 0 1 1.063.852l-.708 2.836a.75.75 0 0 0 1.063.853l.041-.021M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9-3.75h.008v.008H12V8.25Z"
          >
          </path>
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Components/Tooltip LeftBound smoke-test 1`] = `
<div class="grid grid-cols-2 gap-4 w-[37.5rem]">
  <div class="font-mono text-center">
    dark
  </div>
  <div class="font-mono text-center">
    light
  </div>
  <div class="w-64 h-64 bg-neutral-1300 flex items-center m-6 border mx-auto rounded-lg">
    <div class="inline-flex ml-2">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] "
      >
        <svg xmlns="http://www.w3.org/2000/svg"
             fill="none"
             viewbox="0 0 24 24"
             stroke-width="1.5"
             stroke="currentColor"
             aria-hidden="true"
             data-slot="icon"
             class="text-neutral-700 dark:text-neutral-600"
             style="width: 1rem; height: 1rem;"
        >
          <path stroke-linecap="round"
                stroke-linejoin="round"
                d="m11.25 11.25.041-.02a.75.75 0 0 1 1.063.852l-.708 2.836a.75.75 0 0 0 1.063.853l.041-.021M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9-3.75h.008v.008H12V8.25Z"
          >
          </path>
        </svg>
      </button>
    </div>
  </div>
  <div class="w-64 h-64 flex items-center m-6 border mx-auto rounded-lg">
    <div theme="light"
         class="inline-flex ml-2"
    >
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] "
      >
        <svg xmlns="http://www.w3.org/2000/svg"
             fill="none"
             viewbox="0 0 24 24"
             stroke-width="1.5"
             stroke="currentColor"
             aria-hidden="true"
             data-slot="icon"
             class="text-neutral-700 dark:text-neutral-600"
             style="width: 1rem; height: 1rem;"
        >
          <path stroke-linecap="round"
                stroke-linejoin="round"
                d="m11.25 11.25.041-.02a.75.75 0 0 1 1.063.852l-.708 2.836a.75.75 0 0 0 1.063.853l.041-.021M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9-3.75h.008v.008H12V8.25Z"
          >
          </path>
        </svg>
      </button>
    </div>
  </div>
</div>
`;
